# LiteStep

./: meson.build
litestep/: COMFactory.h  COMService.cpp  FullscreenMonitor.cpp  IDesktopWallpaper.h  IDesktopWallpaperPrivate.h  litestep.rc  meson.build
lsapi/: BangCommand.cpp  SettingsDefines.h  aboutbox.cpp  lsapi.rc  lsapidefines.h  meson.build
utility/: core.hpp  fixup.h  meson.build  utility.vcxproj
